# vertex-ai-creative-studio

./: .gcloudignore  .gitignore  INSTALL.md  README.md  cloudbuild.yaml  deploy.sh  docker-compose.yml  main.py  ruff.toml
.github/: CODEOWNERS
experiments/arena/: .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
experiments/arena/common/: metadata.py  storage.py
experiments/arena/components/: dialog.py  page_scaffold.py  side_nav.py  styles.py
experiments/arena/config/: default.py  firebase_config.py  spanner_config.py
experiments/arena/models/: gemini_model.py  generate.py  set_up.py
experiments/arena/pages/: arena.py  gemini2.py  history.py  leaderboard.py  settings.py
experiments/arena/prompts/: imagen_prompts.json  utils.py
experiments/arena/scripts/: README.md  diffusion_db_downloader.py  env_to_gcloud.sh  gcs_bulk_uploader.py  load_metadata_to_firestore.py  setup_study_db.py
experiments/arena/state/: state.py
experiments/arena/utils/: logger.py
experiments/babel/app/: .gitignore  Dockerfile  Procfile  README.md  envfile.example  main.py  pyproject.toml  requirements.txt
experiments/promptlandia/: .gitignore  GEMINI.md  Procfile  README.md  app.py  developers_guide.md  pyproject.toml  requirements.txt
experiments/promptlandia/components/: header.py  page_scaffold.py  side_nav.py  styles.py
experiments/promptlandia/config/: default.py
experiments/promptlandia/models/: gemini.py  model_setup.py  parsers.py  prompts.py
experiments/promptlandia/pages/: checklist.py  generate.py  playground.py  promptlandia.py  settings.py  video_checklist.py
experiments/promptlandia/state/: state.py
experiments/promptlandia/terraform/: README.md  main.tf  outputs.tf  variables.tf
experiments/promptlandia/tests/: test_checklist_isolated.py  test_e2e.py  test_rendering_logic.py
experiments/veo-app/: .cors-config.json  .gitignore  .terraform.lock.hcl  AGENTS.md  Dockerfile  GEMINI.md  Procfile  README.md  app_factory.py  build.sh  cloudbuild.yaml  developers_guide.md  devserver.sh  dotenv.template  idx-template.json  main.py  main.tf  outputs.tf  pyproject.toml  requirements.txt  tutoral.md  tutorial.md  variables.tf
experiments/veo-app/common/: analytics.py  auth.py  metadata.py  storage.py  utils.py  workflows.py
experiments/veo-app/components/: capability_tile.py  constants.py  dialog.py  header.py  image_thumbnail.py  page_scaffold.py  pill.py  side_nav.py  snackbar.py  stepper.py  styles.py  tab_nav.py
experiments/veo-app/config/: about_content.json  banana_presets.py  chirp_3hd.py  default.py  gemini_tts.py  gemini_tts_models.py  gemini_tts_voices.py  imagen_models.py  navigation.json  portrait_styles.py  rewriters.py  tts_presets.json  veo_models.py  virtual_model_options.json
experiments/veo-app/docs/: vertex-ai-creative-studio.drawio
experiments/veo-app/models/: character_consistency.py  character_consistency_models.py  chirp_3hd.py  gemini.py  gemini_tts.py  image_models.py  lyria.py  model_setup.py  requests.py  shop_the_look_handlers.py  shop_the_look_models.py  shop_the_look_workflow.py  starter_pack.py  veo.py  video_processing.py  virtual_model_generator.py  vto.py
experiments/veo-app/pages/: about.py  character_consistency.py  chirp_3hd.py  config.py  edit_images.py  gemini2.py  gemini_image_generation.py  gemini_tts.py  home.py  imagen.py  library.py  lyria.py  pixie_compositor.py  portraits.py  recontextualize.py  shop_the_look.py  starter_pack.py  styles.py  test_character_consistency.py  test_doodle.py  test_gemini_image_gen.py  test_index.py  test_infinite_scroll.py  test_pixie_compositor.py  test_uploader.py  test_vto_prompt_generator.py  test_worsfold_encoder.py  veo.py  vto.py  welcome.py
experiments/veo-app/plans/: AUTH_MIDDLEWARE_PLAN.md  CHIRP3_HD_ADVANCED_FEATURES_PLAN.md  CHIRP3_HD_PAGE_PLAN.md  CHOOSER_COMPONENT_DEBUGGING_LOG.md  DOODLE_PAGE_PLAN.md  DOWNLOAD_BUTTON_COMPONENT_PLAN.md  DREAMVVT_WORKFLOW_PLAN.md  GEMINI_TTS_PAGE_PLAN.md  INFINITE_SCROLL_CHOOSER_PLAN.md  InteractiveTile_Summary.md  LIBRARY_PAGINATION_REFACTOR_PLAN.md  LIBRARY_REFRESH_PLAN.md  LIBRARY_USER_FILTER_PHASE_1_PLAN.md  LIBRARY_USER_FILTER_PHASE_2_PLAN.md  MOTION_PORTRAITS_REFACTOR_PLAN.md  PAGE_SETTINGS_DIALOG_PLAN.md  PIXIE_COMPOSITOR_PLAN.md  PRODUCT_RECONTEXT_PLAN.md  SHOP_THE_LOOK_REFACTOR_PLAN.md  STARTER_PACK_PLAN.md  USE_FROM_LIBRARY_PLAN.md  VEO_1080P_PLAN.md  VEO_GENERATE_AUDIO_PLAN.md  VEO_NEGATIVE_PROMPT_PLAN.md  VEO_PERSON_GENERATION_SAFETY_PLAN.md  VTO_ERROR_HANDLING_PLAN.md  WEB_COMPONENT_INTEGRATION_GUIDE.md  WORSFOLD_ENCODER_PLAN.md  analytics_implementation_plan.md  character_consistency_decomposed_workflow_plan.md  character_consistency_plan.md  character_consistency_temp_analysis.md
experiments/veo-genetic-prompt-optimizer/: .env.example  .gitignore  README.md  original_prompts.json  original_prompts_mixed.json  original_prompts_w_img.json  original_prompts_wo_img.json  pyproject.toml  veo_guide.md
(+454 files in other folders)
