[project]
name = "mesop-arena"
version = "0.1.0"
description = "GenMedia Creative Studio - Arena"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.2.0",
    "fastparquet>=2024.11.0",
    "firebase-admin>=6.7.0",
    "flask>=3.1.0",
    "google-auth>=2.38.0",
    "google-cloud-aiplatform>=1.87.0",
    "google-cloud-firestore>=2.20.1",
    "google-cloud-spanner>=3.53.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.9.0",
    "gunicorn>=23.0.0",
    "mesop>=1.0.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "werkzeug>=3.1.3",
]
