[project]
name = "veo-app"
version = "0.1.0"
description = "GenMedia Creative Studio - Veo app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=6.6.0",
    "google-cloud-aiplatform>=1.79.0",
    "google-genai>=0.8.0",
    "mediapy>=1.2.2",
    "mesop>=0.14.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "shortuuid>=1.0.13",
    "tenacity>=9.0.0",
]
